Fix order form elements not showing up

--- a/app/assets/stylesheets/ticketing/_orders.scss
+++ b/app/assets/stylesheets/ticketing/_orders.scss
@@ -245,3 +245,8 @@ table {
     text-decoration: line-through;
   }
 }
+
+// workaround for jQuery not able to override .d-none with inline styles
+.d-none-unimportant {
+  @extend %d-none;
+}
